# ssrl-vit-mae-jepa

./: .gitignore  LICENSE  README.md  download_weights.sh  notebook.ipynb  pyproject.toml
configs/: baseline.yaml  mae.yaml  mae2.yaml  mae3.yaml
scripts/: data.py  evaluate_classifier.py  linear_probe.py  pretrain_mae.py  run_pretrain_ablation.py  train_cnn.py  train_mae.py  utils.py  visualize_reconstruction.py  visualize_representation.py
scripts/ablation/: run_baseline_ablation.py  run_pretrain_ablation.py  run_train_ablation.py
scripts/evaluation/: evaluate_classifier.py  visualize_reconstruction.py  visualize_representation.py  visualize_test_accuracy.py  visualize_val_acc_by_mode.py  visualize_val_accuracy.py
scripts/training/: pretrain_mae.py  train_mae.py
scripts/weight_utils/: copy_ckpts.py  extract_weights.py
src/: data.py  models.py
src/models/: base_ssl.py  classifier.py  heads.py  linear_probe.py  mae.py
src/models/baseline/: base_model.py  cnn.py
src/models/mae/: classifier.py  decoder.py  encoder.py  mae_vit.py
src/training/: baseline_trainer.py  classifier.py  mae.py  mae_trainers.py
src/utils/: classifier_module.py  pretrain_module.py  reconstruction.py  train_module.py
test/: test_cuda_benchmark.py  test_cuda_torch.py
tests/: test_mae_pretrain.py
