[project]
name = "ssrl-vit-mae-jepa"
version = "0.1.0"
description = "Self-supervised representation learning coursework."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=7.1.0",
    "lightning>=2.5.6",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.21",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
